connection strings are disguised

--- a/Products_API_Test/App.config
+++ b/Products_API_Test/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     
-  <add name="StudentDbContext" connectionString="metadata=res://*/Model.StudentModel.csdl|res://*/Model.StudentModel.ssdl|res://*/Model.StudentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7OMR3N3;initial catalog=StudentDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="StudentDbContext" connectionString="metadata=res://*/Model.StudentModel.csdl|res://*/Model.StudentModel.ssdl|res://*/Model.StudentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yourServer;initial catalog=StudentDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="BaseUrl" value="http://localhost:7496/api/students/" />
   </appSettings>
